--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-icons": "^4.3.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.0.1",
     "styled-components": "^5.0.1"
