--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.0.1",
+    "react-scroll": "^1.8.6",
     "styled-components": "^5.0.1"
   },
   "scripts": {
